# cuestionario_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  rag.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
