[project]
name = "chatbot-rag"
version = "0.1.0"
description = "Chatbot RAG con PDF, Langchain, Ollama y Streamlit"
authors = ["Jhon Ramos]
readme = "README.md"
requires-python = ">=3.10"

[tool.uv.dependencies]
# Langchain core y comunidad
langchain = "*"
langchain-community = "*"
langsmith = "*"

# Embeddings y almacenamiento vectorial
chromadb = "*"
tiktoken = "*"

# Modelos locales
ollama = "*"

# Procesamiento de PDF
pypdf = "*"

# Frontend
streamlit = "*"

# Carga de variables de entorno
python-dotenv = "*"

# Recomendado para hot-reload más eficiente
watchdog = "*"
